yanl/examples/t1/fail/comparatie.yanl
# Un numar poate fi testat pt egalitate numai cu un alt numar

program dude;
var x:integer;
    y:real;
				z:char;
				
begin
	if (x<y) then
			writestring("ok");
	if (x<z) then
			writestring("not ok");
end.